--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -16,10 +15,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.CYEQWEqy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.nxVZdlim.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DJEQQ8xV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D4G1nr1w.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DE3_VCj1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DUa3pFyD.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B23PkIcs.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bi_HV0Vd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DSr0NJmq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bh1X2hzk.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.B10NNNXL.js"><title>my portfolio</title><!-- HEAD_svelte-vw44hm_START --><!-- HEAD_svelte-vw44hm_END -->
@@ -29,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_peptci = {
+					__sveltekit_s7bs64 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/stvnmbt.github.io"
 					};
@@ -39,8 +38,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.nxVZdlim.js"),
-						import("./_app/immutable/entry/app.B23PkIcs.js")
+						import("./_app/immutable/entry/start.D4G1nr1w.js"),
+						import("./_app/immutable/entry/app.Bi_HV0Vd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
